# redis-optimization

./: .gitignore  CMakeLists.txt  README.md  cached_article_wrk.txt  cached_wrk.txt  initial_article_wrk.txt  initial_wrk.txt  scrpt.sh
src/: main.cpp  main_with_redis.cpp  main_without_redis.cpp
